# strips-cpp

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
src/: CMakeLists.txt  main.cpp  strips.h
src/algorithms/: STRIPS_solver.h
src/structs/: STRIPS_instance_t.h  STRIPS_solution_t.h
